# rswitcher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: app_16.raw  app_256.raw  app_32.raw  app_48.raw  en.raw  ru.raw  ua.raw
corpus/: en.txt  ru.txt  ua.txt
scripts/: simulate_typing.py
src/: autostart.rs  bigrams.rs  buffer.rs  exceptions.rs  layout.rs  logger.rs  main.rs  settings.rs  switcher.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: benchmark.rs  bigrams.rs  buffer.rs  commands.rs  exceptions.rs  globals.rs  hook.rs  layout.rs  logger.rs  main.rs  settings.rs  switcher.rs  tray.rs
ui/: index.html  main.js  style.css
