[package]
name = "rswitcher"
version = "0.1.1-alpha"
edition = "2021"
publish = false

[[bin]]
name = "rswitcher"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.0"
tauri-plugin-opener = "2.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }


